Criei outro paragrafro

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1> Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt voluptas non accusamus consequuntur natus harum eaque dolore blanditiis perferendis optio, temporibus aspernatur impedit expedita eum a ullam sed, iste cupiditate!</p>
+    <hr>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae molestiae libero dicta facere sit qui, eius at officiis. Beatae alias delectus eveniet sit magni nostrum soluta voluptate a quaerat perferendis.</p>
 </body>
 </html>
